2004-11-11    <lgs@sicem.biz>

	* newsitems.py (item): fixed mistake with octal dates

	* articles.src: added a row for Patrick Wagstrom article

2004-11-09    <lgs@sicem.biz>

	* newsitems.py (item): added a newsitem for that tutorial

	* articles.src: added a row for tigrux tutorial

2004-11-05    <lgs@sicem.biz>

	* newsitems.py (item): added item for PyGTK 2.4.1 by pachi

2004-10-05  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* downloads.src: updated the current version

	* newsitems.py (item): added item for PyGTK 2.4.0, Gnome-Python 2.6.0
	and PyOrbit 2.0.1

2004-10-04  John Finlay  <finlay@moeraki.com>

	* reference.src: Update version and date info.

2004-09-31  Christian Reis <kiko@async.com.br>

	* newsitems.py: add a -*- coding header

	* feed.py: use range(len(x)) instead of enumerate to make us
	python2.2-compliant.

2004-09-30  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* head.src : added a link in the head section announcing the rss
	(patch sent by Rafael Margin aka pachi)

2004-09-29  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* feed.py: added link support

	* default.css (a): make the rules for 'a' only apply to link elements

2004-09-28  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py : added item for PyGTK 2.3.97

2004-09-16  Christian Reis <kiko@async.com.br>

	* applications.src: add DiskSearch as per request from Stefan Saring
	<stefan@saring.de>

2004-09-08  Christian Reis <kiko@async.com.br>

	* applications.src: fix Mum, broken link reported by Nicolas Girard
	<nicolas.girard@nerim.net>.

	* default.css: remove h5's bottom margin.

	* Makefile, .htaccess: ensure we supply RSS content as XML and UTF-8.
	Also make the RSS and news-related rules smarter.

	* newsitems.py, feed.py: rework the way news items are converted into
	HTML and RSS, which causes us to actually validate at this point. Used
	James' suggestion to look at www.feedvalidator.org and hacked around
	the various peculiarities of RSS. The main change was moving the date