@@ -5,12 +5,12 @@
 <h2>PyGTK Reference Manual</h2>
         
 <h3>PyGTK 2.x (GTK+ 2.x) Reference Manual </h3>
-    Version 2.4.11 Last updated 2004-10-03<br>
+    Version 2.5.0 Last updated 2004-11-15<br>
  
 <ul>
    <li><a href="pygtk2reference/index.html">Reference Manual</a></li>
-   <li><a href="dist/pygtk2reference.tgz">Gzip'd Tarball of Reference Manual</a> (810kB)<br>
-   <li><a href="dist/pygtk2reference.tbz2">Bzip2'd Tarball of Reference Manual</a> (551kB)<br>
+   <li><a href="dist/pygtk2reference.tgz">Gzip'd Tarball of Reference Manual</a> (841 kB)<br>
+   <li><a href="dist/pygtk2reference.tbz2">Bzip2'd Tarball of Reference Manual</a> (578 kB)<br>
 </ul>
 
 </div>
