@@ -1,3 +1,9 @@
+2004-11-16  John Finlay  <finlay@moeraki.com>
+
+	* newsitems.py (item): New ref manual 2.5.0.
+
+	* reference.src: Update for 2.5.0 ref manual.
+
 2004-11-11    <lgs@sicem.biz>
 
 	* newsitems.py (item): fixed mistake with octal dates
